tests/src/tests/fail/no-struct.rs
use async_generic::async_generic;

#[async_generic]
struct Struct {}

fn main() {}
