tests/src/tests/fail/no-struct.stderr
error: async_generic can only be used with functions
 --> src/tests/fail/no-struct.rs:3:1
  |
3 | #[async_generic]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `async_generic` (in Nightly builds, run with -Z macro-backtrace for more info)
